# gpt-agent

./: .env.example  CLAUDE.md  LICENSE  README.md  agent.py  cli.py  debug_logger.py  main.py  model_client.py  pyproject.toml  requirements-dev.txt  requirements.txt  streaming.py  tools.py  view_debug_logs.py
docs/: VLLM_GPT_OSS.md  troubleshooting.md
scripts/: test_connection.py  view_debug_logs.py
src/gpt_oss_agent/: __init__.py  __version__.py  config.py  exceptions.py
src/gpt_oss_agent/api/: __init__.py
src/gpt_oss_agent/cli/: __init__.py  app.py  commands.py
src/gpt_oss_agent/clients/: __init__.py  exa.py  vllm.py
src/gpt_oss_agent/core/: __init__.py  agent.py  instructions.py  runner.py
src/gpt_oss_agent/tools/: __init__.py  base.py  registry.py  web_search.py
src/gpt_oss_agent/utils/: __init__.py  debug_logger.py  logging.py
tests/: __init__.py  conftest.py
tests/unit/: test_config.py
